lab4/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kub-base-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kube-lab
  template:
    metadata:
      labels:
        app: kube-lab
    spec:
      containers:
        - name: lab04
          image: reshetov/arch-lab-4:1.0
          ports:
            - name: container-port
              containerPort: 8000
          livenessProbe:
            httpGet:
              port: container-port
            periodSeconds: 5
          readinessProbe:
            httpGet:
              port: container-port
              path: /health
            periodSeconds: 5
