lab4/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-lab-service
spec:
  ports:
    - port: 8000
  selector:
    app: kube-lab
  type: NodePort
