lab4/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: kube-lab.info
      http:
        paths:
        - path: /
          backend:
            serviceName: kube-lab-service
            servicePort: container-port
